--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -60,7 +60,7 @@
                 android:gravity="center_horizontal"
                 android:hint="Your ID"
                 android:inputType="text"
-                android:text="Ov6c4Fyk"
+                android:text="nmg"
                 android:textColor="#FFFFFF"
                 tools:ignore="MissingConstraints" />
 
@@ -90,7 +90,7 @@
                 android:gravity="center_horizontal"
                 android:hint="Your Product Key"
                 android:inputType="text"
-                android:text="DSMuFv3XY4fN"
+                android:text="test"
                 android:textColor="#FFFFFF"
                 tools:ignore="MissingConstraints" />
 
@@ -120,7 +120,7 @@
                 android:gravity="center_horizontal"
                 android:hint="Your Name"
                 android:inputType="text"
-                android:text="王小明"
+                android:text="融的傳人"
                 android:textColor="#FFFFFF"
                 tools:ignore="MissingConstraints" />
 
