--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:elevation="80dp"
         android:gravity="center"
-        android:textColor="#FFFFFF"
+        android:textColor="#00FFFFFF"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/progressBar"
@@ -30,7 +30,7 @@
         android:layout_marginTop="30dp"
         android:gravity="center_horizontal"
         android:indeterminate="false"
-        android:progressDrawable="@drawable/ball"
+        android:progressDrawable="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
