--- a/app/src/main/res/drawable/switch_disable.xml
+++ b/app/src/main/res/drawable/switch_disable.xml
@@ -1,30 +1,23 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="30dp"
     android:height="30dp"
-    android:viewportWidth="20"
-    android:viewportHeight="20">
+    android:viewportWidth="30"
+    android:viewportHeight="30">
   <path
-      android:pathData="M10,10m-10,0a10,10 0,1 1,20 0a10,10 0,1 1,-20 0"
+      android:pathData="M15,15m-15,0a15,15 0,1 1,30 0a15,15 0,1 1,-30 0"
       android:fillColor="#454545"/>
   <group>
     <clip-path
-        android:pathData="M2,2h16v16h-16z"/>
+        android:pathData="M5,5h20v20h-20z"/>
     <path
-        android:pathData="M10,16.667C13.682,16.667 16.667,13.682 16.667,10C16.667,6.318 13.682,3.333 10,3.333C6.318,3.333 3.333,6.318 3.333,10C3.333,13.682 6.318,16.667 10,16.667Z"
+        android:pathData="M23.842,19.125C24.11,18.491 24.217,17.801 24.154,17.115C24.09,16.43 23.858,15.771 23.477,15.197C23.097,14.623 22.58,14.153 21.973,13.828C21.366,13.502 20.688,13.333 20,13.333H18.95C18.61,11.994 17.862,10.793 16.809,9.897C15.757,9.001 14.452,8.455 13.075,8.333M9.167,9.167C7.865,9.886 6.842,11.021 6.259,12.389C5.676,13.758 5.568,15.282 5.951,16.719C6.334,18.156 7.187,19.423 8.374,20.32C9.56,21.217 11.013,21.691 12.5,21.667H20C20.483,21.666 20.962,21.581 21.417,21.417"
         android:strokeLineJoin="round"
         android:strokeWidth="2"
         android:fillColor="#00000000"
         android:strokeColor="#ffffff"
         android:strokeLineCap="round"/>
     <path
-        android:pathData="M12.667,10L10,7.333L7.333,10"
-        android:strokeLineJoin="round"
-        android:strokeWidth="2"
-        android:fillColor="#00000000"
-        android:strokeColor="#ffffff"
-        android:strokeLineCap="round"/>
-    <path
-        android:pathData="M10,12.667V7.333"
+        android:pathData="M5.833,5.833L24.167,24.167"
         android:strokeLineJoin="round"
         android:strokeWidth="2"
         android:fillColor="#00000000"
