--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -4,20 +4,95 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#262629"
     tools:context=".ui.slideshow.SlideshowFragment">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="0dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent">
+        <TextView
+            android:id="@+id/sign_up"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
+            android:gravity="center_horizontal"
+            android:text="@string/pw_hint"
+            android:textSize="30sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            tools:ignore="MissingConstraints" />
+
 
     <TextView
-        android:id="@+id/text_slideshow"
-        android:layout_width="match_parent"
+        android:id="@+id/id_"
+        android:layout_width="210dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="123123132"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:gravity="fill_horizontal"
+        android:text="ID:"
+        android:textAppearance="@style/name_"
+        tools:ignore="MissingConstraints" />
+
+    <EditText
+        android:id="@+id/id_text"
+        android:layout_width="210dp"
+        android:layout_height="35dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="2dp"
+        android:autofillHints=""
+        android:background="@drawable/input_background"
+        android:gravity="center_horizontal"
+        android:hint="Your ID"
+        android:inputType="text"
+        android:text=""
+        android:textColor="#FFFFFF"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/product_key"
+        android:layout_width="210dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center"
+        android:layout_marginTop="2dp"
+        android:gravity="fill_horizontal"
+        android:text="Product Key:"
+        android:textAppearance="@style/name_"
+        tools:ignore="MissingConstraints" />
+
+    <EditText
+        android:id="@+id/product_key_text"
+        android:layout_width="210dp"
+        android:layout_height="35dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="2dp"
+        android:autofillHints=""
+        android:background="@drawable/input_background"
+        android:gravity="center_horizontal"
+        android:hint="Your Product Key"
+        android:inputType="text"
+        android:text=""
+        android:textColor="#FFFFFF"
+        tools:ignore="MissingConstraints" />
+        <Button
+            android:id="@+id/pw_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="203dp"
+            android:layout_marginTop="24dp"
+
+            android:text="@string/send"
+            app:iconTint="#FFFFFF"
+            app:rippleColor="#9A77D5" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
