--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,7 @@
         android:id="@+id/nav_home"
         android:name="com.example.sfc_front.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/activity_main" />
+        tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_gallery"
