--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,7 +21,7 @@
             />
         <item
             android:background="#FFFFFFFF"
-            android:id="@+id/nav_help"
+            android:id="@+id/nav_gallery"
             android:icon="@drawable/help"
             android:title="@string/menu_help"
             android:textAppearance="@style/read_file"
